--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">AppCartoon</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_tab">TabActivity</string>
+
+    <!--bottom tab  底部tab 文字-->
+    <string name="txt_tab_cartoon">漫画</string>
+    <string name="txt_tab_novel">小说</string>
+    <string name="txt_tab_news">新闻</string>
+    <string name="txt_tab_mine">我的</string>
+    <string name="txt_recommend">推荐</string>
+
 </resources>
